@@ -1,0 +1,5 @@
+	.radix a
+	.radix c
+	.radix C#
+	.radix cc
+	.radix Z
